<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <TextView android:layout_width="match_parent"
                  android:id="@+id/fragment_registration_title_text"
                  android:layout_height="match_parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:text="@string/app_name"
                  android:layout_marginTop="100dp"
                  android:layout_marginBottom="50dp"
                  style="@style/BodyText"
                  android:textColor="@android:color/black"
                  android:textSize="30sp"
                  android:gravity="center"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toTopOf="@id/input_layout_register"/>

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:id="@+id/input_layout_register"
                      app:layout_constraintTop_toBottomOf="@id/fragment_registration_title_text"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      android:background="@android:color/white"
                      android:layout_marginStart="15dp"
                      android:layout_marginEnd="15dp"
                      android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:theme="@style/TextLabel"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:errorTextAppearance="@style/FormWhiteErrorStyle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                <com.ccorrads.ossp.loginregistration.views.ValidatableText
                        android:id="@+id/register_name_edit"
                        style="@style/HintText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:theme="@style/TextLabel"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:errorTextAppearance="@style/FormWhiteErrorStyle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                <com.ccorrads.ossp.loginregistration.views.ValidatableEmail
                        android:id="@+id/register_email_edit"
                        style="@style/HintText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:theme="@style/TextLabel"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:errorTextAppearance="@style/FormWhiteErrorStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_email">

                <com.ccorrads.ossp.loginregistration.views.ValidatablePw
                        android:id="@+id/register_password_edit"
                        android:hint="@string/prompt_password"
                        style="@style/HintText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_password_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:theme="@style/TextLabel"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:errorTextAppearance="@style/FormWhiteErrorStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_email">

                <com.ccorrads.ossp.loginregistration.views.ValidatablePw
                        android:id="@+id/register_password_edit_repeat"
                        android:hint="@string/reenter_password"
                        style="@style/HintText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/fragment_register_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/prompt_register"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    style="@style/ButtonText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/register_password"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>