<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <TextView android:layout_width="match_parent"
                  android:id="@+id/fragment_create_business_title_text"
                  android:layout_height="match_parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:text="@string/create_business"
                  android:layout_marginTop="100dp"
                  android:layout_marginBottom="50dp"
                  style="@style/BodyText"
                  android:textColor="@android:color/black"
                  android:textSize="30sp"
                  android:gravity="center"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toTopOf="@id/input_layout_register"/>

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:id="@+id/input_layout_register"
                      app:layout_constraintTop_toBottomOf="@id/fragment_create_business_title_text"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      android:background="@android:color/white"
                      android:layout_marginStart="15dp"
                      android:layout_marginEnd="15dp"
                      android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_business_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Business Name"
                    android:theme="@style/TextLabel"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:errorTextAppearance="@style/FormWhiteErrorStyle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                <com.ccorrads.ossp.loginregistration.views.ValidatableText
                        android:id="@+id/register_business_name_edit"
                        style="@style/HintText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_business_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Location"
                    android:theme="@style/TextLabel"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:errorTextAppearance="@style/FormWhiteErrorStyle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                <com.ccorrads.ossp.loginregistration.views.ValidatableText
                        android:id="@+id/register_business_location_edit"
                        style="@style/HintText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/register_business_location_icon"
                    android:drawableEnd="@drawable/ic_location_searching"
                    android:layout_width="wrap_content"
                    android:drawablePadding="5dp"
                    android:padding="20dp"
                    android:layout_gravity="center"
                    android:text="@string/tap_to_search"
                    style="@style/TextLabel"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/register_business_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/prompt_register_business"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    style="@style/ButtonText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/register_business_location"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>